Language level adjustments